<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/white_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        
        <ImageView
            android:id="@+id/img_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="12sp"
            android:src="@mipmap/back_arrow"
            android:tint="@color/white"
            android:visibility="visible" />

        <com.magnum.handloom.widget.RobotoBoldTextView
            android:id="@+id/logo_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="8dp"
        android:layout_below="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_userfirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/user_first_name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">

                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_userlastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/user_last_name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">


                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">


                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_other_mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Alternate Mobile no(optional)"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">


                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_useremail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">


                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="12dp">


                    <com.magnum.handloom.widget.RobotoNormalEditText
                        android:id="@+id/ed_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/border_shadow_edittext"
                        android:drawablePadding="@dimen/margin_10"
                        android:drawableTint="@color/black"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/cnf_password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_black">

                    <com.magnum.handloom.widget.RobotoBoldTextView
                        android:id="@+id/btn_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <com.magnum.handloom.widget.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="22dp"
                        android:text="Terms And Condition?"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <com.magnum.handloom.widget.RobotoBoldTextView
                        android:id="@+id/txt_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="17dp"
                        android:layout_marginRight="17dp"
                        android:padding="15dp"
                        android:text="Sign In"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>